teams-spring2022/BudapestMonkeys/mystyle.css
  @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
  *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
  } 

  body{
    width:100vw;
    height:100vh;
    margin:0;
    background: url("https://images.unsplash.com/photo-1478737270239-2f02b77fc618?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1600&q=80");
    background-position:center;
    display:flex;

  }
  nav{
    display: flex;
    height: 80px;
    width: 100%;
    background: white;
    align-items: center;
    justify-content: space-between;
    padding: 0 50px 0 100px;
    flex-wrap: wrap;
  }
  nav .logo{
    color: #1b1b1b;
    font-size: 35px;
    font-weight: 600;
  }
  .members{
    color: #fff;
    font-size: 35px;
    font-weight: 600;
    
  }
  navmem{
    display: flex;
    height: 80px;
    width: 100%;
    align-items: center;
    justify-content: space-between;
    padding: 0 50px 0 100px;
    flex-wrap: wrap;
  }
 figcaption{
    font-size: 30px;
    color: white;
 }
  nav ul{
    display: flex;
    flex-wrap: wrap;
    list-style: none;
  }
  nav ul li{
    margin: 0 5px;
  }
  nav ul li a{
    color: #1b1b1b;
    text-decoration: none;
    font-size: 18px;
    font-weight: 500;
    padding: 8px 15px;
    border-radius: 5px;
    letter-spacing: 1px;
    transition: all 0.3s ease;
  }
  /*nav ul li a.active,
  */nav ul li a:hover{
    color: #111;
    background: lightblue;
  }
  nav .menu-btn i{
    color: #fff;
    font-size: 22px;
    cursor: pointer;
    display: none;
  }
  input[type="checkbox"]{
    display: none;
  }
  @media (max-width: 1000px){
    nav{
      padding: 0 40px 0 50px;
    }
  }
  @media (max-width: 920px) {
    nav .menu-btn i{
      display: block;
    }
    #click:checked ~ .menu-btn i:before{
      content: "\f00d";
    }
    nav ul{
      position: fixed;
      top: 80px;
      left: -100%;
      background: #111;
      height: 100vh;
      width: 100%;
      text-align: center;
      display: block;
      transition: all 0.3s ease;
    }
    #click:checked ~ ul{
      left: 0;
    }
    nav ul li{
      width: 100%;
      margin: 40px 0;
    }
    nav ul li a{
      width: 100%;
      margin-left: -100%;
      display: block;
      font-size: 20px;
      transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
    }
    #click:checked ~ ul li a{
      margin-left: 0px;
    }
    nav ul li a.active,
    nav ul li a:hover{
      background: none;
      color: cyan;
    }
  }
  .content{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    width: 100%;
    padding: 0 30px;
    color: #fff;
  }
  .content div{
    font-size: 40px;
    font-weight: 700;
  }
  
  
  .search-container button:hover {
    background: lightblue;
  }
  
  .start {
    background-color: blue;
    border: none;
    color: white;
    padding: 16px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 2px;
    transition-duration: 0.4s;
    cursor: pointer;
  }
  
  .start:hover {
    background-color: blue;
    color: white;
  }
  
  .button {
    background-color: #4CAF50; /*green*/
    border: none;
    color: white;
    padding: 16px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    z-index: 1;
    transition-duration: 0.4s;
    cursor: pointer;
  }
  
  .start {
    background-color: #4CAF50; /*green*/
    color: black; 
    border: 2px solid #368d39;
    border-radius: 8px;
  }
  
  .start:hover {
    background-color: #4267B2;
    color: white;
  }
  
  .text-container {
    position: relative;
  }
  
  /* Bottom right text */
  .text-block {
    position: absolute;
    bottom: 20px;
    right: 20px;
    background-color:white;
    color: black;
    padding-left: 20px;
    padding-right: 20px;
  }
  



	

